styles: Add styling for Email button

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,3 +12,7 @@ $color-font-white: #fff;
 // Border
 $color-border: $color-secondary;
 $color-border-focus: $color-primary;
+
+// Button
+$button-width: 9rem; // random value for now...
+$button-border-radius: 1.5em;
