styles: Add styling for text content

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -2,6 +2,8 @@
   border: 0;
   border-radius: $button-border-radius;
   cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-size: $font-size-regular;
   font-weight: bold;
   height: 2.5rem;
   padding: 0 1.5rem;
