--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,8 +6,11 @@ $color-secondary: #d8d8d8;
 $color-secondary-shade-1: #eee;
 
 // Typography
-$color-font-black: #333;
-$color-font-white: #fff;
+$font-color-black: #4a4a4a;
+$font-color-white: #fff;
+$font-size-small: 0.75rem;
+$font-size-regular: 1rem;
+$font-size-large: 2rem;
 
 // Border
 $color-border: $color-secondary;
