styles: Add styling for icons

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -12,7 +12,7 @@
 
 .btn--primary {
   background-color: $color-primary;
-  color: $color-font-white;
+  color: $font-color-white;
 
   &:hover {
     background-color: $color-primary-shade-1;
