--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,3 +24,6 @@ $avatar-width: $avatar-size;
 // Button
 $button-width: $avatar-size;
 $button-border-radius: 1.5em;
+
+// Icon
+$icon-size: 1.5rem;
