--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,7 +19,7 @@ $color-border: $color-secondary;
 $color-border-focus: $color-primary;
 
 // Avatar
-$avatar-size: 9rem;
+$avatar-size: 10rem;
 $avatar-height: $avatar-size;
 $avatar-width: $avatar-size;
 
@@ -30,8 +30,8 @@ $button-border-radius: 1.5em;
 // Card
 $card-backgroundColor: $color-white;
 $card-boxShadow: 0 14px 28px 1px rgba(0, 0, 0, 0.5);
-$card-height: 400px;
-$card-width: 600px;
+$card-height: 22rem;
+$card-width: 38rem;
 
 // Icon
 $icon-size: 1.5rem;
