--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -2,6 +2,43 @@
   background-color: $card-backgroundColor;
   border-radius: 4px;
   box-shadow: $card-boxShadow;
-  height: $card-height;
-  width: $card-width;
+  display: flex;
+  flex-direction: column;
+  height: calc(#{$card-height} - 2 * 1.5rem);
+  justify-content: space-around;
+  padding: 1.5rem 2rem;
+  width: calc(#{$card-width} - 2 * 2rem);
+
+  &--bottomPanel {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    height: 10%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  &--topPanel {
+    display: flex;
+    flex-direction: row;
+    height: 80%;
+    justify-content: space-around;
+    width: 100%;
+
+    &__left {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 30%;
+    }
+
+    &__right {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 55%;
+    }
+  }
 }
