style: Update color scheme

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -6,8 +6,8 @@
   }
 
   &--description {
+    font-family: 'Roboto', sans-serif;
     font-size: $font-size-small;
-    font-weight: normal;
   }
 
   &--body {
