--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // Color
-$color-primary: #0366d6;
-$color-primary-shade-1: #0c80db;
+$color-primary: #0c80db;
+$color-primary-shade-1: #0366d6;
 $color-primary-shade-2: rgba(3, 102, 214, 0.5);
 $color-secondary: #d8d8d8;
 $color-secondary-shade-1: #eee;
@@ -10,9 +10,9 @@ $color-white: #fff;
 // Typography
 $font-color-black: $color-black;
 $font-color-white: $color-white;
-$font-size-small: 0.75rem;
+$font-size-small: 0.8rem;
 $font-size-regular: 1rem;
-$font-size-large: 2rem;
+$font-size-large: 2.5rem;
 
 // Border
 $color-border: $color-secondary;
@@ -29,7 +29,7 @@ $button-border-radius: 1.5em;
 
 // Card
 $card-backgroundColor: $color-white;
-$card-boxShadow: 0 14px 28px 1px rgba(0, 0, 0, 0.5);
+$card-boxShadow: 0 14px 28px 5px rgba(0, 0, 0, 0.5);
 $card-height: 22rem;
 $card-width: 38rem;
 
