color: Update primary color shades

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,6 @@
 // Color
 $color-primary: #0c80db;
-$color-primary-shade-1: #0366d6;
-$color-primary-shade-2: rgba(3, 102, 214, 0.5);
+$color-primary-shade-1: #4274ac;
 $color-secondary: #d8d8d8;
 $color-secondary-shade-1: #eee;
 $color-black: #4a4a4a;
