--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -15,4 +15,8 @@
       margin-right: 0;
     }
   }
+
+  .fa-github-square {
+    font-size: calc(#{$icon-size} * 1.1); // tweaked the icon size
+  }
 }
