--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -5,12 +5,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 80%;
   justify-content: space-around;
-  max-height: $card-height;
-  max-width: $card-width;
+  margin: 1rem;
+  max-width: $card-maxWidth;
   padding: 1.5rem;
-  width: 80%;
 
   &--animation {
     -webkit-transition:
@@ -33,7 +31,6 @@
     flex-direction: row;
     height: 10%;
     justify-content: center;
-    // padding: 1rem 0;
     width: 100%;
   }
 
@@ -41,8 +38,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 80%;
     justify-content: space-around;
+    margin: 1rem 0;
     width: 100%;
 
     &__left {
@@ -58,27 +55,22 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      width: 55%;
+      width: 50%;
     }
   }
 }
 
-@media screen and (max-width: 600px) and (min-width: 0) {
+@media screen and (max-width: 560px) and (min-width: 0) {
   .card {
-    height: 100%;
-    justify-content: space-between;
-    max-height: 35rem;
-    max-width: 20rem;
+    max-width: $card-maxWidth-mobile;
+    min-width: $card-minWidth-mobile;
 
     &--topPanel {
-      height: 90%;
-
-      &__left {
-        width: 100%;
-      }
+      margin: 0;
 
       &__right {
         align-items: center;
+        min-height: $card-content-minHeight-mobile;
         text-align: center;
         width: 100%;
       }
@@ -86,6 +78,7 @@
 
     &--bottomPanel {
       height: 10%;
+      margin-top: 1rem;
     }
   }
 }
