--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-weight: normal;
   margin: 0;
 }
