project: Set website to construction mode

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,38 +1,4 @@
 // Color
 $color-primary: #0c80db;
-$color-primary-shade-1: #4274ac;
-$color-secondary: #d8d8d8;
-$color-secondary-shade-1: #eee;
-$color-black: #4a4a4a;
+$color-black: #333333;
 $color-white: #fff;
-
-// Typography
-$font-color-black: $color-black;
-$font-color-white: $color-white;
-$font-size-small: 0.8rem;
-$font-size-regular: 1rem;
-$font-size-large: 2.5rem;
-
-// Border
-$color-border: $color-secondary;
-$color-border-focus: $color-primary;
-
-// Avatar
-$avatar-size: 10rem;
-$avatar-height: $avatar-size;
-$avatar-width: $avatar-size;
-
-// Button
-$button-width: $avatar-size;
-$button-border-radius: 1.5em;
-
-// Card
-$card-backgroundColor: $color-white;
-$card-boxShadow: 0 14px 28px 5px rgba(0, 0, 0, 0.5);
-$card-maxWidth: 38rem;
-$card-maxWidth-mobile: 19rem;
-$card-minWidth-mobile: 19rem;
-$card-content-minHeight-mobile: 10rem;
-
-// Icon
-$icon-size: 1.5rem;
