styles: Add styling for content

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,7 @@
-// Color
-$color-primary: #0c80db;
-$color-black: #333333;
-$color-white: #fff;
+// color
+$primary-color: #0c80db;
+$black: #333;
+$white: #fff;
+
+// layout + positioning
+$content-padding: 90px;
