--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,15 @@ body {
     text-align: left;
   }
 
+  .links {
+    margin-top: 20px;
+
+    a {
+      color: inherit;
+      margin-right: 15px;
+    }
+  }
+
   p {
     font-size: 20px;
     font-weight: normal;
