--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,17 +1,23 @@
 @import "variables";
 
+// Mobile-first layout
 .content-container {
   align-items: center;
-  background-color: $content-backgroundColor;
   display: flex;
-  flex-direction: column;
-  height: $content-height;
-  justify-content: center;
-  width: $content-width;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
 }
 
 .content {
-  width: 350px;
+  background-color: $content-backgroundColor;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 60%;
+  padding: 0 10vw;
+  width: 100%;
 
   h1 {
     font-size: 64px;
@@ -35,5 +41,29 @@
     font-weight: 400;
     line-height: 1.5;
     margin-top: 35px;
+  }
+}
+
+// Tablet
+@media only screen and (min-width: 600px) {
+  .content {
+    min-height: 50%;
+    padding: 0 75px;
+  }
+
+  p {
+    width: 350px;
+  }
+}
+
+// Desktop
+@media only screen and (min-width: 769px) {
+  .content-container {
+    width: $content-width;
+  }
+
+  .content {
+    height: 100%;
+    padding: 0 75px;
   }
 }
