--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,5 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
