--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -31,9 +31,25 @@
     margin-top: 10px;
   }
 
-  a {
-    color: inherit;
-    margin-right: 15px;
+  .links-container {
+    width: $linksContainer-width;
+
+    // When an icon is hovered, make all its other sibling grey in color
+    &:hover a {
+      color: $grey;
+    }
+
+    a {
+      color: inherit;
+
+      &:hover {
+        color: $primary-color-light;
+      }
+
+      &:not(:last-child) {
+        margin-right: $icon-margin;
+      }
+    }
   }
 
   p {
