--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,33 +1,32 @@
 // color
 $black: #333;
 $grey: #ccc;
-$primary-color: #202b33;
-$primary-color-light: #30414d;
+$primary-color: #333;
 $white: #fff;
 
 // content
 $content-backgroundColor: $white;
 $content-minHeight: 400px;
-$content-padding: 0 10px;
+$content-padding: 0 24px;
 $content-width: 100%;
 $contentContainer-height: 100vh;
 $contentContainer-width: 100vw;
 
 $content-minHeight-tablet: 50%;
-$content-padding-tablet: 10px 75px;
+$content-padding-tablet: 0 72px;
 $content-width-tablet: $content-width;
 $contentContainer-height-tablet: $contentContainer-height;
 $contentContainer-width-tablet: $contentContainer-width;
 
 $content-minHeight-desktop: 100%;
-$content-padding-desktop: 0 75px;
+$content-padding-desktop: 0 72px;
 $content-width-desktop: 100%;
 $contentContainer-height-desktop: $contentContainer-height;
 $contentContainer-width-desktop: 500px;
 
 // content link
-$icon-margin: 15px;
-$icon-size: 33px;
+$icon-margin: 12px;
+$icon-size: 36px;
 $icon-count: 4;
 $linksContainer-width: calc(((#{$icon-count} - 1) * #{$icon-margin}) + (#{$icon-count} * #{$icon-size}));
 
