--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,28 +1,44 @@
+:root {
+    --main-color: #406CD1;
+    --bg-color: none;
+    --text-color: #333;
+    --text-secondary-color: #999;
+    --border-color: #f4f4f4;
+    --header-border-color: #ccc;
+    --highlight-color: #ddd;
+    --highlight-bg-color: #282C34;
+    --selection-bg-color: #b3d4fc;
+    --label-bg-color: #f9f2f4;
+    --table-bg-color: #f4f4f4;
+    --table-border-color: #ddd;
+}
+
 body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
     font-family: "ubuntu", sans-serif;
-    font-weight: 400;
-    color: #333;
-    line-height: 1.6;
     font-size: 16px;
+    font-weight: 400;
+    line-height: 1.6;
 }
 
 a, a:hover {
-    color: #a00;
+    color: var(--main-color);
     text-decoration: none;
     word-break: break-word;
 }
 
 html,button,input,select,textarea {
-    color: #333;
+    color: var(--text-color);
 }
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: var(--selection-bg-color);
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: var(--selection-bg-color);
     text-shadow: none;
 }
 
@@ -30,7 +46,7 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid var(--header-border-color);
     margin: 1rem 0;
     padding: 0;
 }
@@ -61,13 +77,10 @@ textarea {
 }
 
 blockquote {
-    margin-left: 1rem;
-    font-style: italic;
-    font-size: 1.4rem;
-    font-family: Georgia,bitstream charter,serif;
+    border-color: var(--main-color);
     border-left: 3px solid;
-    border-color: #a00;
-    padding-left: 20px;
+    margin-left: 0.5rem;
+    padding-left: 1rem;
 }
 
 blockquote cite {
@@ -76,11 +89,24 @@ blockquote cite {
 }
 
 blockquote em {
-    font-weight: 600;
+    font-weight: 700;
+}
+
+code,kbd,pre,samp {
+    font-family: "JetBrains Mono", monospace;
+}
+
+code {
+    background-color: var(--highlight-bg-color);
+    border-radius: 0.2em;
+    border: 1px solid var(--highlight-bg-color);
+    color: var(--highlight-color);
+    font-size: 0.8rem;
+    padding: 0.1em 0.25em;
 }
 
 a,a:hover {
-    color: #a00;
+    color: var(--main-color);
     text-decoration: none
 }
 
@@ -91,7 +117,7 @@ a:hover {
 h1,h2,h3,h4,h5,h6 {
     font-family: raleway,sans-serif;
     line-height: 1.2;
-    color: #333;
+    color: var(--text-color);
     font-weight: 200;
 }
 
@@ -163,11 +189,16 @@ ul.flat li {
 }
 
 ul {
-    list-style: disc inside;
+    list-style: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 2em;
 }
 
 .site-title a {
-	color: #333;
+	color: var(--text-color);
 	text-decoration: none !important;
 }
 
@@ -180,21 +211,25 @@ ul {
 }
 
 .highlight pre {
+    background-color: transparent !important;
     margin-bottom: 0;
     margin-top: 0;
-    padding: 20px;
-    background-color: transparent !important;
+    padding: 16px;
+}
+
+.highlight code {
+  padding: none;
 }
 
 .highlight {
     background: 0 0;
-    background-color: #FAFAFA;
+    background-color: var(--highlight-bg-color);
+    border-radius: 0.2em;
 }
 
 pre code {
   display: inline-block;
 }
-  
 
 .wrapper {
     max-width: 760px;
@@ -224,7 +259,7 @@ pre code {
 
 .header nav {
     margin-top: 20px;
-    border-top: 1px solid #f4f4f4;
+    border-top: 1px solid var(--border-color);
 }
 
 .header nav ul,
@@ -266,7 +301,7 @@ pre code {
     font-size: 0.75rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: #999;
+    color: var(--text-secondary-color);
     margin-bottom: 20px;
     letter-spacing: 1px;
 }
@@ -279,7 +314,7 @@ pre code {
 .post .post-header .meta,
 .list .posts .post .meta {
     font-size: 0.725rem;
-    color: #999;
+    color: var(--text-secondary-color);
     margin-bottom: 4px;
 }
 
@@ -301,12 +336,12 @@ pre code {
 }
 
 .post .draft-label {
-    color: #a00;
+    color: var(--main-color);
     text-decoration: none;
     padding: 2px 4px;
     border-radius: 4px;
     margin-left: 6px;
-    background-color: #f9f2f4;
+    background-color: var(--label-bg-color);
 }
 
 .post-tags .tags li {
@@ -316,10 +351,10 @@ pre code {
 
 .post-tags .tags a {
     display: inline-block;
-    border: 1px solid #a00;
+    border: 1px solid var(--main-color);
     border-radius: 4px;
     padding: 0px 6px;
-    color: #a00;
+    color: var(--main-color);
     line-height: 20px;
     font-size: 12px;
     text-decoration: none;
@@ -334,8 +369,8 @@ pre code {
 .footer {
     text-align: right;
     font-size: 0.75em;
-    color: #999;
-    border-top: 1px solid #f4f4f4;
+    color: var(--text-secondary-color);
+    border-top: 1px solid var(--border-color);
     padding: 20px 0;
     margin-top: 40px;
 }
@@ -381,12 +416,12 @@ pre code {
 }
 
 table th {
-    background-color: #f4f4f4;
+    background-color: var(--table-bg-color);
 }
 
 table th, table td {
     padding: 10px 20px;
-    border: 1px solid #dddddd;
+    border: 1px solid var(--table-border-color);
 }
 
 @media (max-width: 767px) {
@@ -412,5 +447,10 @@ table th, table td {
 
     .container {
         margin-top: 10px;
+    }
+
+    .highlight pre {
+        margin: 0 -20px;
+        background-color: var(--highlight-bg-color) !important;
     }
 }
