chore: Fix monospace font styling
Signed-off-by: Justin Toh <tohjustin@hotmail.com>

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,6 +94,8 @@ blockquote em {
 
 code,kbd,pre,samp {
     font-family: "JetBrains Mono", monospace;
+    font-kerning: none;
+    font-variant-numeric: tabular-nums lining-nums;
 }
 
 code {
