feat: Add Plausible analytics
Signed-off-by: Justin Toh <tohjustin@hotmail.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -51,4 +51,11 @@
 	{{- end }}
 	{{- end }}
 	{{- end }}
+
+	<!-- Plausible Analytics -->
+	{{ if .Site.Params.plausible.enable }}
+	{{ with .Site.Params.plausible.domain }}
+	<script defer data-domain="{{ . }}" src="https://plausible.io/js/plausible.js"></script>
+	{{ end }}
+	{{ end }}
 </head>
