fix: Fix footnote link bug that redirects user to root page
Signed-off-by: Justin Toh <tohjustin@hotmail.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <head>
+	<base href="{{ .Permalink }}">
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	{{- $title := ( .Title ) -}}
